--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "core-js": "^2.5.4",
+    "firebase": "^7.2.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -41,6 +42,7 @@
     "@angular/cli": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
+    "@angular/fire": "^5.2.1",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
